task gap fix

--- a/public/view/commonViews/coursesTasks/coursesTask.css
+++ b/public/view/commonViews/coursesTasks/coursesTask.css
@@ -81,7 +81,8 @@ body {
     box-shadow: 15px 15px 30px rgb(25, 25, 25), -15px -15px 30px rgb(60, 60, 60);
     display: flex;
     flex-direction: row;
-    align-items: flex-start; 
+    align-items: flex-start;
+    gap: 20px; 
     justify-content: center;
     color: white;
     min-height: 100px; 
@@ -102,6 +103,7 @@ body {
     }
 
     #file__img {
+        margin-left: 0px;
         width: 20px;
         height: 20px;
     }
@@ -165,7 +167,7 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     color: white;
     gap: 20px;
